# OEIS-compute

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  run
.github/workflows/: test.yml
A002326/: lib.h  lib.hpp  main.cpp
A005113/: main.cpp
A005113/template/: CMakeLists.txt  main.cpp
A045345/: CMakeLists.txt  lib.h  lib.hpp  main.cpp
A061955/: main.cpp  plot_sieve.py
A062241/: lib.h  lib.hpp  log  log_fft  main.cpp
A062241/proof/: trash.lean
A090245/: main.cpp
A098550/: PrimeVector.hpp  RingBuffer.hpp  lib.hpp  main.cpp
A123132/: main.cpp
A140866/: main.cpp
A309370/: CMakeLists.txt  Elem.h  Elem.hpp  main.cpp
A331373/: CMakeLists.txt  lib.h  lib.hpp  main.cpp
A332101/: main.cpp
A371627/: b371627.txt  main.cpp
A388850/: CMakeLists.txt  main.cpp
A389544/: CMakeLists.txt  b389544.txt  explanation.md  lib.h  lib.hpp  main.cpp
A390848/: CMakeLists.txt  b390848.txt  lib.h  main.cpp
A393584/: 10th_answer_by_permutation  libgenetic.h  libgenetic.hpp  libnaive.h  libnaive.hpp  log  main.cpp
Z_erdos36_convolution/: erdos36_intg.ipynb  lib.hpp  main.cpp
benchmark/: A390848Bench.cpp  BigIntBench.cpp  CMakeLists.txt  PrimeBench.cpp  PrimeIntBench.cpp
benchmark/baseline/: a390848_bench.json  bigint_bench.json  prime_bench.json  primeint_bench.json
benchmark/results/: bigint
erdos/: b.txt  main.cpp
math/: Basic.h  Basic.hpp  NumberTheory.cpp  NumberTheory.h  NumberTheory.hpp  Stats.h  Stats.hpp
math/numtheory/: CMakeLists.txt  Jacobi.hpp
notes/: erdos295
scripts/: check_bfile.py  ci_make_baseline.sh  ci_regression.sh  compare_artifact.sh  regression_test.py  use_artifacts.sh
template/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  testBigInt.cpp  testComplementNonnVector.cpp  testDecBigInt.cpp  testExSeq.cpp  testFft.cpp  testFraction.cpp  testLogging.cpp  testMath.cpp  testMetaProg.cpp  testModInt.cpp  testMoreMath.cpp  testParallel.cpp  testPrime.cpp  testPrimeInt.cpp  testTreap.cpp
utils/: BigInt.cpp  BigInt.h  BigInt.hpp  BigInt.tpp  CMakeLists.txt  ComplementNonnVector.cpp  ComplementNonnVector.h  ComplementNonnVector.hpp  DecBigInt.cpp  DecBigInt.h  DenseBigInt.cpp  DenseBigInt.h  Fft.cpp  Fft.h  Fft.hpp  Format.hpp  Fraction.cpp  Fraction.h  Fraction.hpp  GeneticAlg.h  GeneticAlg.hpp  Hash.hpp  JumpMap.hpp  LogInt.h  Logging.hpp  MetaProg.h  MetaProg.hpp  ModInt.cpp  ModInt.h  ModInt.hpp  MoreMath.cpp  MoreMath.h  Parallel.hpp  Prime.cpp  Prime.h  Prime.hpp  PrimeInt.cpp  PrimeInt.h  PrimeInt.hpp  SlowBigInt.tpp  (+7 more)
utils/maya/: Dictionary.hpp  Factory.hpp  Prime.hpp  String.hpp  StringFormat.hpp  Tagged.hpp
wip_erdos36/: erdos36.ipynb  libnaive.h  main.cpp
wip_erdos36_intg/: lib.h  main.cpp
